--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwind Home</title>
     <!-- fontawseome CSS -->
-    <link rel="stylesheet" href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="./css/all.min.css">
     <!-- Output file -->
     <link rel="stylesheet" href="./css/output.css">
 </head>
